--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
+<main>
+    <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
+</main>
 
 </body>
 </html>
