--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 <main>
     <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
+    <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
+    <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
+    <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
+    <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
 </main>
 
 </body>
