nieuwe update van prachtige div

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
     <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
     <h1>Welkom op de fake huiswerkopdracht van de git workshop</h1>
+
+    <section>
+        <div>
+
+        </div>
+    </section>
 </main>
 
 </body>
